--- a/index.html
+++ b/index.html
@@ -57,11 +57,36 @@
     </header>
 
     <main>
-      <div class="images">
-        <img src="./images/image-product-1.jpg" alt="product picture" />
-        <img src="./images/image-product-2.jpg" alt="product picture" />
-        <img src="./images/image-product-3.jpg" alt="product picture" />
-        <img src="./images/image-product-4.jpg" alt="product picture" />
+      <div class="image-media">
+        <span class="previous-arrow"
+          ><svg width="12" height="18" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M11 1 3 9l8 8"
+              stroke="#1D2026"
+              stroke-width="3"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
+        </span>
+        <div class="images">
+          <img src="./images/image-product-1.jpg" alt="product picture" />
+          <img src="./images/image-product-2.jpg" alt="product picture" />
+          <img src="./images/image-product-3.jpg" alt="product picture" />
+          <img src="./images/image-product-4.jpg" alt="product picture" />
+        </div>
+        <span class="next-arrow"
+          ><svg width="13" height="18" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="m2 1 8 8-8 8"
+              stroke="#1D2026"
+              stroke-width="3"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
+        </span>
+
         <div class="thumbnails d-none">
           <img src="./images/image-product-1-thumbnail.jpg" alt="" />
           <img src="./images/image-product-2-thumbnail.jpg" alt="" />
@@ -69,6 +94,7 @@
           <img src="./images/image-product-4-thumbnail.jpg" alt="" />
         </div>
       </div>
+
       <div class="container">
         <h2 class="text-orange fs-normal upper">Sneaker Company</h2>
         <h1>Fall Limited Edition Sneakers</h1>
