--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
         </span>
 
         <div class="thumbnails d-none">
-          <img src="./images/image-product-1-thumbnail.jpg" alt="" />
+          <img
+            src="./images/image-product-1-thumbnail.jpg"
+            alt=""
+            class="active-thumbnail"
+          />
           <img src="./images/image-product-2-thumbnail.jpg" alt="" />
           <img src="./images/image-product-3-thumbnail.jpg" alt="" />
           <img src="./images/image-product-4-thumbnail.jpg" alt="" />
@@ -103,8 +107,7 @@
           Featuring a durable rubber outer sole, they’ll withstand everything
           the weather can offer.
         </h3>
-      </div>
-      <div class="container">
+
         <div class="price-holder">
           <div class="price">
             <span class="current-price">$125.00</span>
