feat: Add pricing area styles

--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@
       </div>
 
       <div class="container">
-        <h2 class="text-orange fs-normal upper">Sneaker Company</h2>
-        <h1>Fall Limited Edition Sneakers</h1>
-        <h3 class="text-fade fs-small">
+        <h2 class="text-orange fs-normal upper company-name">
+          Sneaker Company
+        </h2>
+        <h1 class="sneaker-edition">Fall Limited Edition Sneakers</h1>
+        <h3 class="text-fade fs-small sneaker-description">
           These low-profile sneakers are your perfect casual wear companion.
           Featuring a durable rubber outer sole, they’ll withstand everything
           the weather can offer.
@@ -111,17 +113,20 @@
         <div class="price-holder">
           <div class="price">
             <span class="current-price">$125.00</span>
-            <span class="discount">50%</span>
+            <span class="discount text-orange bg-primary-pale">50%</span>
           </div>
-          <span class="old-price">$250.00</span>
+          <span class="old-price text-fade">$250.00</span>
         </div>
         <!-- end price-holder-->
-        <div class="quantity-holder">
-          <button class="minus"></button>
-          <span class="quantity"></span>
-          <button class="plus"></button>
+
+        <div class="cart-manager">
+          <div class="quantity-holder">
+            <!-- <button class="minus"></button> -->
+            <span class="quantity">0</span>
+            <!-- <button class="plus"></button> -->
+          </div>
+          <button class="cart-button bg-primary text-light">Add to cart</button>
         </div>
-        <button class="cart-button"></button>
       </div>
     </main>
   </body>
